# agentassert-typec

./: .gitignore  CHANGELOG.md  README.md  RELEASE_v0.6.1.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
brew/: agentassert-typec.rb
docs/: README.md  _sidebar.md  api-reference.md  architecture.md  case-study.md  claude-code.md  contracts.md  faq.md  getting-started.md  index.md  licensing.md  math.md  proxy.md  sdk.md
npm/: index.js  install.js  package.json
scripts/: bench_operators.py  bench_proxy_overhead.py  build-binary.sh  publish-all.sh  smoke_test_install.sh
tests/fixtures/contracts/: abc-v03-compat.yaml  full-governance.yaml  invalid-missing-name.yaml  missing-dsl-version.yaml  safety-minimal.yaml
